@@ -1,3 +1,6 @@
+Fri  Mar 18 2005	H. Wade Minter (minter@lunenburg.org)
+     * Don't change the modtime on an upgrade.
+
 Mon  Mar 14 2005	H. Wade Minter (minter@lunenburg.org)
      * Add the framework for the "bundle" import/export.
 
